[package]
name = "nme"
version = "0.1.2"
edition = "2021"

[dependencies]
sdl2 = "*"
glow = "0.13.1"
imgui = "0.12.0"
imgui-sdl2-support = "*"
imgui-glow-renderer = "*"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
]
