[package]
name = "nme"
version = "0.1.6"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
iced = { version = "0.12.1", features = ["tokio"] }
lazy_static = "1.5.0"
rand = "0.8.5"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
]
